src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_norm_except_dim(value v, int64_t pow, int64_t dim);
value atg_norm_out(value out, value self, value p, value dim, int keepdim);
value atg_norm_scalar_out(value out, value self, value p);
value atg_norm_scalaropt_dim(value self, value p, value dim, int keepdim);
value atg_norm_scalaropt_dim_dtype(value self, value p, value dim, int keepdim, int dtype);
value atg_norm_scalaropt_dtype(value self, value p, int dtype);
value atg_norm_scalaropt_dtype_out(value out, value self, value p, int dtype);
value atg_normal_(value self, double mean, double std);
value atg_normal_functional(value self, double mean, double std);
value atg_not_equal(value self, value other);
value atg_not_equal_(value self, value other);
value atg_not_equal_scalar_out(value out, value self, value other);
value atg_not_equal_tensor(value self, value other);
value atg_not_equal_tensor_(value self, value other);
value atg_not_equal_tensor_out(value out, value self, value other);
value atg_nuclear_norm(value self, int keepdim);
value atg_nuclear_norm_dim(value self, value dim, int keepdim);
value atg_nuclear_norm_dim_out(value out, value self, value dim, int keepdim);
value atg_nuclear_norm_out(value out, value self, int keepdim);
value atg_numpy_t(value self);
value atg_one_hot(value self, int64_t num_classes);
value atg_ones(value size, int options_kind, int options_device);
value atg_ones_like(value self);
value atg_ones_like_out(value out, value self);
value atg_ones_out(value out, value size);
value atg_orgqr(value self, value input2);
value atg_orgqr_out(value out, value self, value input2);
value atg_ormqr(value self, value input2, value input3, int left, int transpose);
value atg_ormqr_out(value out, value self, value input2, value input3, int left, int transpose);
value atg_outer(value self, value vec2);
value atg_outer_out(value out, value self, value vec2);
value atg_output_nr(value self);
value atg_pad(value self, value pad, const char * mode, value value_);
value atg_pad_sequence(value sequences, int batch_first, double padding_value, const char * padding_side);
value atg_pairwise_distance(value x1, value x2, double p, double eps, int keepdim);
value atg_pdist(value self, double p);
value atg_permute(value self, value dims);
value atg_permute_copy(value self, value dims);
value atg_permute_copy_out(value out, value self, value dims);
value atg_pin_memory(value self, int device);
value atg_pinverse(value self, double rcond);
value atg_pixel_shuffle(value self, int64_t upscale_factor);
value atg_pixel_shuffle_out(value out, value self, int64_t upscale_factor);
value atg_pixel_unshuffle(value self, int64_t downscale_factor);
value atg_pixel_unshuffle_out(value out, value self, int64_t downscale_factor);
value atg_poisson(value self);
value atg_poisson_nll_loss(value input, value target, int log_input, int full, double eps, int64_t reduction);
value atg_poisson_out(value out, value self);
value atg_polar(value abs, value angle);
value atg_polar_out(value out, value abs, value angle);
value atg_polygamma(int64_t n, value self);
value atg_polygamma_(value self, int64_t n);
value atg_polygamma_out(value out, int64_t n, value self);
value atg_positive(value self);
value atg_pow(value self, value exponent);
value atg_pow_(value self, value exponent);
value atg_pow_scalar(value self, value exponent);
value atg_pow_scalar_out(value out, value self, value exponent);
value atg_pow_tensor_(value self, value exponent);
value atg_pow_tensor_scalar(value self, value exponent);
value atg_pow_tensor_scalar_out(value out, value self, value exponent);
value atg_pow_tensor_tensor_out(value out, value self, value exponent);
value atg_prelu(value self, value weight);
value atg_prod(value self, int dtype);
value atg_prod_dim_int(value self, int64_t dim, int keepdim, int dtype);
value atg_prod_int_out(value out, value self, int64_t dim, int keepdim, int dtype);
value atg_prod_out(value out, value self, int dtype);
value atg_put(value self, value index, value source, int accumulate);
value atg_put_(value self, value index, value source, int accumulate);
value atg_put_out(value out, value self, value index, value source, int accumulate);
value atg_q_per_channel_axis(value self);
value atg_q_per_channel_scales(value self);
value atg_q_per_channel_scales_out(value out, value self);
value atg_q_per_channel_zero_points(value self);
value atg_q_per_channel_zero_points_out(value out, value self);
value atg_q_scale(value self);
value atg_q_zero_point(value self);
value atg_qr(value self, int some);
value atg_qr_q(value Q, value R, value self, int some);
value atg_quantile(value self, value q, value dim, int keepdim, const char * interpolation);
value atg_quantile_out(value out, value self, value q, value dim, int keepdim, const char * interpolation);
value atg_quantile_scalar(value self, double q, value dim, int keepdim, const char * interpolation);
value atg_quantile_scalar_out(value out, value self, double q, value dim, int keepdim, const char * interpolation);
value atg_quantize_per_channel(value self, value scales, value zero_points, int64_t axis, int dtype);
value atg_quantize_per_channel_out(value out, value self, value scales, value zero_points, int64_t axis, int dtype);
value atg_quantize_per_tensor(value self, double scale, int64_t zero_point, int dtype);
value atg_quantize_per_tensor_dynamic(value self, int dtype, int reduce_range);