src/bindings/torch_bindings_generated5.ml


  let stubs_norm_except_dim =
    foreign
      "atg_norm_except_dim"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_norm_out =
    foreign
      "atg_norm_out"
      (gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_norm_scalar_out =
    foreign
      "atg_norm_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_norm_scalaropt_dim =
    foreign
      "atg_norm_scalaropt_dim"
      (gc_tensor @-> scalar @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_norm_scalaropt_dim_dtype =
    foreign
      "atg_norm_scalaropt_dim_dtype"
      (gc_tensor
       @-> scalar
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_norm_scalaropt_dtype =
    foreign
      "atg_norm_scalaropt_dtype"
      (gc_tensor @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_norm_scalaropt_dtype_out =
    foreign
      "atg_norm_scalaropt_dtype_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_normal_ =
    foreign "atg_normal_" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_normal_functional =
    foreign
      "atg_normal_functional"
      (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_not_equal =
    foreign "atg_not_equal" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_not_equal_ =
    foreign "atg_not_equal_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_not_equal_scalar_out =
    foreign
      "atg_not_equal_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_not_equal_tensor =
    foreign "atg_not_equal_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_not_equal_tensor_ =
    foreign "atg_not_equal_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_not_equal_tensor_out =
    foreign
      "atg_not_equal_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nuclear_norm =
    foreign "atg_nuclear_norm" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_nuclear_norm_dim =
    foreign
      "atg_nuclear_norm_dim"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_nuclear_norm_dim_out =
    foreign
      "atg_nuclear_norm_dim_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_nuclear_norm_out =
    foreign
      "atg_nuclear_norm_out"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_numpy_t = foreign "atg_numpy_t" (gc_tensor @-> returning raw_tensor)

  let stubs_one_hot =
    foreign "atg_one_hot" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_ones =
    foreign "atg_ones" (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_ones_like = foreign "atg_ones_like" (gc_tensor @-> returning raw_tensor)

  let stubs_ones_like_out =
    foreign "atg_ones_like_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ones_out =
    foreign "atg_ones_out" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_orgqr = foreign "atg_orgqr" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_orgqr_out =
    foreign
      "atg_orgqr_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ormqr =
    foreign
      "atg_ormqr"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_ormqr_out =
    foreign
      "atg_ormqr_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_outer = foreign "atg_outer" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_outer_out =
    foreign
      "atg_outer_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_output_nr = foreign "atg_output_nr" (gc_tensor @-> returning int64_t)

  let stubs_pad =
    foreign
      "atg_pad"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> string
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_pad_sequence =
    foreign
      "atg_pad_sequence"
      (ptr gc_tensor @-> int @-> int @-> double @-> string @-> returning raw_tensor)
  ;;

  let stubs_pairwise_distance =
    foreign
      "atg_pairwise_distance"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_pdist = foreign "atg_pdist" (gc_tensor @-> double @-> returning raw_tensor)

  let stubs_permute =
    foreign "atg_permute" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_permute_copy =
    foreign "atg_permute_copy" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_permute_copy_out =
    foreign
      "atg_permute_copy_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_pin_memory =
    foreign "atg_pin_memory" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_pinverse =
    foreign "atg_pinverse" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_pixel_shuffle =
    foreign "atg_pixel_shuffle" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_pixel_shuffle_out =
    foreign
      "atg_pixel_shuffle_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_pixel_unshuffle =
    foreign "atg_pixel_unshuffle" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_pixel_unshuffle_out =
    foreign
      "atg_pixel_unshuffle_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_poisson = foreign "atg_poisson" (gc_tensor @-> returning raw_tensor)

  let stubs_poisson_nll_loss =
    foreign
      "atg_poisson_nll_loss"
      (gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_poisson_out =
    foreign "atg_poisson_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_polar = foreign "atg_polar" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_polar_out =
    foreign
      "atg_polar_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_polygamma =
    foreign "atg_polygamma" (int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_polygamma_ =
    foreign "atg_polygamma_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_polygamma_out =
    foreign
      "atg_polygamma_out"
      (gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_positive = foreign "atg_positive" (gc_tensor @-> returning raw_tensor)
  let stubs_pow = foreign "atg_pow" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_pow_ = foreign "atg_pow_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_pow_scalar =
    foreign "atg_pow_scalar" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_pow_scalar_out =
    foreign
      "atg_pow_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_pow_tensor_ =
    foreign "atg_pow_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_pow_tensor_scalar =
    foreign "atg_pow_tensor_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_pow_tensor_scalar_out =
    foreign
      "atg_pow_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_pow_tensor_tensor_out =
    foreign
      "atg_pow_tensor_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_prelu = foreign "atg_prelu" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_prod = foreign "atg_prod" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_prod_dim_int =
    foreign
      "atg_prod_dim_int"
      (gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_prod_int_out =
    foreign
      "atg_prod_int_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_prod_out =
    foreign "atg_prod_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_put =
    foreign
      "atg_put"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_put_ =
    foreign
      "atg_put_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_put_out =
    foreign
      "atg_put_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_q_per_channel_axis =
    foreign "atg_q_per_channel_axis" (gc_tensor @-> returning int64_t)
  ;;

  let stubs_q_per_channel_scales =
    foreign "atg_q_per_channel_scales" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_q_per_channel_scales_out =
    foreign
      "atg_q_per_channel_scales_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_q_per_channel_zero_points =
    foreign "atg_q_per_channel_zero_points" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_q_per_channel_zero_points_out =
    foreign
      "atg_q_per_channel_zero_points_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_q_scale = foreign "atg_q_scale" (gc_tensor @-> returning double)
  let stubs_q_zero_point = foreign "atg_q_zero_point" (gc_tensor @-> returning int64_t)
  let stubs_qr = foreign "atg_qr" (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)

  let stubs_qr_q =
    foreign
      "atg_qr_q"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_quantile =
    foreign
      "atg_quantile"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_quantile_out =
    foreign
      "atg_quantile_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_quantile_scalar =
    foreign
      "atg_quantile_scalar"
      (gc_tensor
       @-> double
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_quantile_scalar_out =
    foreign
      "atg_quantile_scalar_out"
      (gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_channel =
    foreign
      "atg_quantize_per_channel"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_channel_out =
    foreign
      "atg_quantize_per_channel_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor =
    foreign
      "atg_quantize_per_tensor"
      (gc_tensor @-> double @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor_dynamic =
    foreign
      "atg_quantize_per_tensor_dynamic"
      (gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;
